Fixed height to application container
Fixed the height to application container for don't have overlapped

--- a/themes/bartik/css/dms.css
+++ b/themes/bartik/css/dms.css
@@ -19,7 +19,7 @@ Project:	Data Management Support Pack
 
 #dm-content{
 	/*background: url(../images/backgroundTemplate.png);*/
-	min-height: 510px;
+	min-height: 535px;
 } 
 
 
